# 3d-linal

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
app/: CMakeLists.txt
app/src/: Bullet.cpp  Bullet.h  Camera.h  Cube.cpp  Cube.h  Engine.cpp  Engine.h  Game.h  Gui.cpp  Gui.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Object.cpp  Object.h  Polygon.h  Spaceship.cpp  Spaceship.h  Triangle.h  main.cpp
libmath/: CMakeLists.txt
libmath/math/: math.cpp  math.hpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
tests/: CMakeLists.txt
tests/src/: test_matrix.cpp  test_vector.cpp
